--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,71 +1,82 @@
 {
-    // Latex workshop
-    "latex-workshop.latex.tools": [
-      {
-        "name": "latexmk",
-        "command": "latexmk",
-        "args": [
+  // Latex workshop
+  "latex-workshop.formatting.latex": "latexindent",
+  "latex-workshop.formatting.latexindent.path": "/usr/bin/latexindent",
+  "latex-workshop.latex.tools": [
+    {
+      "name": "latexmk",
+      "command": "latexmk",
+      "args": [
         "-synctex=1",
         "-interaction=nonstopmode",
         "-file-line-error",
         "-pdf",
         "%DOC%"
-        ]
-      },
-      {
-        "name": "xelatex",
-        "command": "/usr/bin/xelatex",
-        "args": [
+      ]
+    },
+    {
+      "name": "xelatex",
+      "command": "/usr/bin/xelatex",
+      "args": [
         "-synctex=1",
         "-interaction=nonstopmode",
         "-file-line-error",
         "%DOC%"
-          ]
-      },          
-      {
-        "name": "pdflatex",
-        "command": "/usr/bin/pdflatex",
-        "args": [
+      ]
+    },
+    {
+      "name": "pdflatex",
+      "command": "/usr/bin/pdflatex",
+      "args": [
         "-synctex=1",
         "-interaction=nonstopmode",
         "-file-line-error",
         "%DOC%"
-        ]
-      },
-      {
-        "name": "bibtex",
-        "command": "/usr/bin/bibtex",
-        "args": [
+      ]
+    },
+    {
+      "name": "bibtex",
+      "command": "/usr/bin/bibtex",
+      "args": [
         "%DOCFILE%"
-        ]
-      }
-    ],
-"latex-workshop.latex.recipes": [
-      {
-        "name": "xelatex",
-        "tools": [
-        "xelatex"
-                    ]
-              },
-      {
-        "name": "latexmk",
-        "tools": [
-        "latexmk"
-                    ]
-      },
-
-      {
-        "name": "pdflatex -> bibtex -> pdflatex*2",
-        "tools": [
-        "pdflatex",
+      ]
+    }
+  ],
+  "latex-workshop.latex.recipes": [
+    {
+      "name": "xelatex -> bibtex -> xelatex*2",
+      "tools": [
+        "xelatex",
         "bibtex",
-        "pdflatex",
-        "pdflatex"
-                    ]
-      }
-    ],
-"latex-workshop.view.pdf.viewer": "tab",  
-"latex-workshop.latex.clean.fileTypes": [
+        "xelatex",
+        "xelatex"
+      ]
+    },
+    {
+      "name": "xelatex",
+      "tools": [
+        "xelatex"
+      ]
+    },
+    {
+      "name": "latexmk",
+      "tools": [
+        "latexmk"
+      ]
+    },
+    // {
+    //   "name": "pdflatex -> bibtex -> pdflatex*2",
+    //   "tools": [
+    //     "pdflatex",
+    //     "bibtex",
+    //     "pdflatex",
+    //     "pdflatex"
+    //   ]
+    // }
+  ],
+  "latex-workshop.view.pdf.viewer": "tab",
+  "latex-workshop.latex.autoClean.run": "onBuilt", //注意结尾是 t 不是 d
+  "latex-workshop.latex.clean.fileTypes": [
     "*.aux",
     "*.bbl",
     "*.blg",
@@ -85,6 +96,5 @@
     "*.fls",
     "*.log",
     "*.fdb_latexmk"
-  ],
-
+  ], //由于 .gz 文件是用于正反搜索的，所以不建议删除
 }
